finished user story 2

--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,1 +1,8 @@
 <h1><%= @machine.location %> Vending Machine</h1>
+
+<% @machine.snacks.each do |snack| %>
+<%= snack.name %><br>
+$<%= snack.price %><br>
+
+<% end %>
+Average Price: $<%= @machine.snacks.average_price.round(2) %>
